--- a/Fivemoreminutes/app/src/main/AndroidManifest.xml
+++ b/Fivemoreminutes/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@raw/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -19,7 +19,8 @@
         <activity android:name = ".activities.DrillDownAlarmActivity"/>
         <activity android:name=".activities.AlarmNotification"/>
         <receiver android:name=".Receiver.AlarmReceiver"
-            android:enabled="true">
+            android:enabled="true"
+            android:exported="true">
         </receiver>
     </application>
 
